--- a/samples/tutorial/7-3.html
+++ b/samples/tutorial/7-3.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Todo -- dap sample</title>
   <link rel="stylesheet" href="https://www.todobackend.com/client/css/vendor/todomvc-common.css"/>
-  <script src="/0.4.js" _src="https://dap.js.org/0.4.js"></script>
+  <script src="https://dap.js.org/0.5.js"></script>
 </head>
 <body>
 <script>
