--- a/tests/polyrule.html
+++ b/tests/polyrule.html
@@ -10,7 +10,15 @@
 	</head>
 	<body>  
 		<script>
-'BUTTON'.d("! `Click").ui(":query`https://mighty-sands-8773.herokuapp.com/; ! `.")
+'UL'.d("* n@"
+	,'LI'.d("! `hi")
+
+)
+.DICT({
+	n:5,
+	erus: "раз два три".split(" "),
+	eng: "one two three".split(" ")
+})
 
 .RENDER()
 		</script>
