--- a/test.html
+++ b/test.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Dap playground</title>
 		<style>
-		[ui]{cursor:pointer}
+		[ui=click]{cursor:pointer}
 		iframe{height:16em; width:100%; border:4px dashed orange;}
 		</style>
-		<script src="https://dap.js.org/0.4.js"></script>
+		<script src="https://dap.js.org/0.5.js"></script>
 		<link href="https://dap.js.org/docs/dapify.css" rel="stylesheet" type="text/css"/>	
 	</head>
 	<body> 
@@ -18,6 +18,6 @@
 	})
 </pre>
 
-		<script src="https://dap.js.org/stuff/dapify.js"></script>
+		<script src="stuff/dapify--.js"></script>
 	</body>
 </html>
