--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@ Templates are rendered into actual DOM elements, from parent <em>down</em> to ch
 
 </body>
 
-<script src="0.4.js"></script>
+
 <!--
-<script src="https://cdn.jsdelivr.net/gh/jooher/dap/0.4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/jooher/dap/0.5.min.js"></script>
 -->
-<script src="stuff/dapify.js"></script>
+<script src="/0.5.js"></script>
+<script src="/stuff/dapify/ApplyToAllPreElements.js"></script>
 
 <link href="stuff/talks.css" rel="stylesheet" type="text/css"/>	
 <script src="stuff/talks.js#msg=7"></script>
