--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 	<h2>Is it better than React?</h2>
 	<p>Why go dap if there's React? Well, to my taste, React and similar frameworks are too verbose and cumbersome. Dap code is far, far cleaner. In dap code, you can clearly see the structure and logic of your program, often "one element = one line of code". Below are a couple of simple examples inspired by the canonical tutorials from React and Angular. You're welcome to compare the ideas and approaches behind dap and other frameworks.</p>
 	<ul>
-		<li><a href="samples/tictactoe.html" target="_blank">Tic Tac Toe</a>. Inspired by <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
-		<li><a href="samples/toh.html" target="_blank">Tour of Heroes</a>. Inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
+		<li><a href="samples/tictactoe.html" target="_blank">Tic Tac Toe</a> — inspired by <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
+		<li><a href="samples/toh.html" target="_blank">Tour of Heroes</a> — inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
+		<li><a href="samples/todo.html" target="_blank">Todos</a> — a legit <a href="http://todomvc.com/">TodoMVC</a> implementation</li>
 	</ul>
 </section>
 
