--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 		<li><a href="samples/tictactoe.html" target="_blank">Tic Tac Toe</a> — inspired by <a href="https://reactjs.org/tutorial/tutorial.html" target="_blank" rel="nofollow">React tutorial</a></li>
 		<li><a href="samples/toh.html" target="_blank">Tour of Heroes</a> — inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
 		<li><a href="samples/todo.html" target="_blank">Todos</a> — a legit <a href="http://todomvc.com/">TodoMVC</a> implementation</li>
+		<li><a href="samples/conduit/">Conduit</a> a message board front end, inspired by <a href="https://realworld.io">Real World Sample Apps project</a></li>
+		<li><a href="samples/stacks/">Stacks</a> just a simple arcade game</li>
 	</ul>
 </section>
 
