--- a/samples/repch/index.html
+++ b/samples/repch/index.html
@@ -15,8 +15,9 @@
 	
 	<link rel="stylesheet" href="css/material.css"/>
 	<link rel="stylesheet" href="css/colors.css"/>
-	<link rel="stylesheet" href="css/locale/en.css"/>
+	<link rel="stylesheet" href="css/scanner.css"/>
 	
+	<link rel="stylesheet" href="css/locale/en.css"/>
 	
 	<link rel="manifest" href="manifest.json"/>
 	
@@ -68,8 +69,6 @@
 	</article>
 	
 </div>
-
-<script src="https://dap.js.org/0.5.js"></script>
 
 <script type="module">
 
