--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
 		<li><a href="samples/toh.html" target="_blank">Tour of Heroes</a> — inspired by <a href="https://angular.io/tutorial/" target="_blank" rel="nofollow">Angular tutorial</a></li>
 		<li><a href="samples/todo.html" target="_blank">Todos</a> — a legit <a href="http://todomvc.com/">TodoMVC</a> implementation</li>
 		<li><a href="samples/conduit/">Conduit</a> — a message board front end example, inspired by <a href="https://realworld.io">Real World Sample Apps project</a></li>
-		<li><a href="samples/stacks/">Stacks</a> — just a simple arcade game</li>
+		<li><a href="samples/stacks/">Stacks</a> — a simple arcade game</li>
+		<!-- 
+		<li><a href="http://bazamagaza-com.1gb.ru/">Saxophone web store</a></a>
+		-->
 	</ul>
 </section>
 
