--- a/samples/repch/index.html
+++ b/samples/repch/index.html
@@ -66,6 +66,8 @@
 	<article id="about-recent">
 		<h3>Recent items</h3>
 		<p>Here, you will see items you recently interacted with.</p>
+		<p>Start adding material items by scanning their barcode with the <button class="center_focus_weak"></button> button.</p>
+		<p>Add web resources by entering their urls in the search box.</p>
 	</article>
 	
 </div>
