--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<img src="logo/dap-logo.png"/><br/><a href="https://github.com/jooher/dap">https://github.com/jooher/dap</a>
 		<h1>Dap.js: for data-driven web applications</h1>
-		<p>Lightweight and powerful javascript framework for interactive data-driven web applications.</p>
+		<p>Lightweight and neat javascript extension for building reactive applications.</p>
 		<p>Unlike some other frameworks relying on Javascript expressive means, dap offers a higher level of abstraction — a declarative "superscript" language for <i>reactivity rules</i>. These rules are dense, compact, and human-readable at the same time. Dap code is parsed, compiled and executed by a small (less than 9kiB gzipped) client-side script, and does not require any transpilation.</p>
 	</header>
 	<pre class="dap">
