--- a/samples/repch/index.html
+++ b/samples/repch/index.html
@@ -72,30 +72,7 @@
 	
 </div>
 
-<script type="module">
-
-	import App from "./repch.js";
-	App.RENDER();
-
-	if(navigator.serviceWorker)
-		window.addEventListener('load', e=>
-			navigator.serviceWorker.register('service-worker.js')
-			.then(registration=>console.log('Registered!'),err=>console.log('Registration failed: ', err))
-			.catch(err=>console.log(err))
-		)
-	else
-		console.log('service worker is not supported');
-		
-	// prevent from exit by back button
-	(stay =>{
-		window.addEventListener('load', stay);
-		window.addEventListener('popstate', stay);
-	})(e=>{window.history.pushState({},'')})
-
-
-
-</script>
-
+<script type="module" src="repch.js"></script>
 
 </body>
 
