--- a/samples/conduit/index.html
+++ b/samples/conduit/index.html
@@ -22,7 +22,7 @@
 
 			<header>
 					<h1 class="logo"></h1>
-					<p>A place to share your knowledge.</p>
+					<p>A place to test your stuff.</p>
 			</header>
 
 			<footer>
