--- a/samples/repch/index.html
+++ b/samples/repch/index.html
@@ -7,14 +7,10 @@
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
 	
-	
-	<style>
-		[data-dap=false]{display:none !important}
-		[ui=click]{cursor:pointer;}
-	</style>
-	
-	<link rel="stylesheet" href="css/material.css"/>
 	<link rel="stylesheet" href="css/colors.css"/>
+	<link rel="stylesheet" href="/stuff/css/pwa.0.css"/>
+	<link rel="stylesheet" href="css/repch.css"/>
+	<link rel="stylesheet" href="css/stars.css"/>
 	<link rel="stylesheet" href="css/scanner.css"/>
 	
 	<link rel="stylesheet" href="css/locale/en.css"/>
