--- a/samples/repch/index.html
+++ b/samples/repch/index.html
@@ -9,6 +9,7 @@
 	
 	<link rel="stylesheet" href="css/colors.css"/>
 	<link rel="stylesheet" href="/stuff/css/pwa.0.css"/>
+	<link rel="stylesheet" href="/stuff/css/icons.css"/>
 	<link rel="stylesheet" href="css/repch.css"/>
 	<link rel="stylesheet" href="css/stars.css"/>
 	<link rel="stylesheet" href="css/scanner.css"/>
