--- a/stuff/untab.html
+++ b/stuff/untab.html
@@ -1,43 +1,27 @@
 <html>
 <body style="display:flex; flex-direction:column;">
 	<input id="scheme" value="heading page"/>
-	<textarea id="text" style="flex:auto" onchange="javascript:untab()"></textarea>
+	<textarea id="text" style="flex:auto"></textarea>
 	<div id="result" style="flex:auto; background:whitesmoke; overflow:auto; padding:1em; white-space:pre; font-family:monospace"/>
 </body>
-<script>
 
-function untab(){
-	let	scheme = document.getElementById("scheme").value.split(" "),
-		text=document.getElementById("text").value,
-		rows=[],
-		stack=[],
-		last={};
+<script type=module>
 
-	text.split("\n").forEach(line=>{
-		const	row	= line.split(";\t"),
-			head	= row.shift().split("\t"),
-			tabs	= head.length,
-			data	= {};
-			
-		row.unshift(head.pop());
-		row.forEach((v,i)=>data[scheme[i]]=v);
-		
-		if(tabs>stack.length){
-			stack.push(rows);
-			rows=last.rows=[];
-		}
-		
-		while(tabs<stack.length)
-			rows=stack.pop();
-			
-		rows.push(data);
-		last=data;
-	});
+import {untab} from '/stuff/parse.js';
+
+const scheme = document.getElementById("scheme"),
+	text = document.getElementById("text"),
+	result = document.getElementById("result");
 	
-	document.getElementById("result").innerHTML=JSON.stringify(rows,null,"\t");
-}
+const places = await
+		fetch("/samples/poputka/kg.txt")
+		.then( r=> r.ok&&r.text() )
+		.then(untab);
 
+
+text.addEventListener("change", e=>{
+	result.textContent = JSON.stringify(untab(text.value),null,"\t");
+})	
 
 </script>
 </html>
-
