--- a/samples/poputka/tg.html
+++ b/samples/poputka/tg.html
@@ -1,7 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+	<meta charset="utf-8">
+
+	<title>Poput4k</title>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
+<style>
+
+body{
+	color: var(--tg-theme-text-color);
+	background: var(--tg-theme-bg-color);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-size: 18px;
+}
+
+.hint{
+	color: var(--tg-theme-hint-color);
+}
+
+.link{
+	color: var(--tg-theme-link-color);
+}
+
+.button{
+	background: var(--tg-theme-button-color);
+	color: var(--tg-theme-button-text-color);
+	border: none;
+	font-size: 18px;
+}
+
+.button:not(:last-child){
+	margin-bottom: 20px
+}
+
+#usercard{
+	text-align: center;
+}
+
+</style>
+
 </head>
 
-<a href='https://t.me/@popuutka_bot'>send</a>
+
+<body>
+	<div id="usercard"> <!--Карта профиля, человека, который к нам обратился-->
+	</div>
+	<p>Just text</p> <!--Просто текст для проверки-->
+	<p class="hint">Some little hint</p> <!--Просто текст-подсказка для проверки-->
+	<button id="btn" class="button">Show/Hide Main Button</button> <!--Кнопка, чтобы скрыть / показать основную кнопку-->
+</body>
+
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script>
+const
+	tg = window.Telegram.WebApp,
+	tguser = tg.initDataUnsafe.user;
+	
+tg.expand();
+
+tg.onEvent(themeChanged, function(){});
+
+btn.addEventListener('click', function(){
+	if (tg.MainButton.isVisible)tg.MainButton.hide();
+	else tg.MainButton.show();
+});
+</script>
+
+<script src="poputka.js" type=module></script>
