--- a/samples/poputka/index.html
+++ b/samples/poputka/index.html
@@ -8,16 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
 	<link rel="stylesheet" href="pwa.css"/>
 	<link rel="stylesheet" href="poputka.css"/>
-	
+	<link rel="stylesheet" href="colors-ya.css"/>
 <!--	
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">	
-
-	<link rel="stylesheet" href="/stuff/css/pwa.0.css"/>
-	<link rel="stylesheet" href="/stuff/css/colors.0.css"/>
-
-	<link rel="stylesheet" href="css/locale/en.css"/>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
 	<link rel="manifest" href="manifest.json"/>
 -->	
 </head>
