--- a/samples/poputka/tg.html
+++ b/samples/poputka/tg.html
@@ -21,7 +21,7 @@
 	<meta charset="utf-8">
 	<title>Poput4k</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
-	<link rel="stylesheet" href="pwa.css"/>
+	<link rel="stylesheet" href="tg.css"/>
 	<link rel="stylesheet" href="poputka.css"/>
 	<link rel="stylesheet" href="colors-tg.css"/>
 </head>
