--- a/samples/poputka/tg.html
+++ b/samples/poputka/tg.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html style="
+<html
+
+_style="
 --tg-theme-accent-text-color: #168acd;
 --tg-color-scheme: light;
 --tg-theme-bg-color: #ffffff;
@@ -16,7 +18,28 @@
 --tg-theme-text-color: #000000;
 --tg-viewport-height: 590px;
 --tg-viewport-stable-height: 590px;
-">
+"
+
+style="
+--tg-theme-accent-text-color: #6ab2f2;
+--tg-color-scheme: dark;
+--tg-theme-bg-color: #17212b;
+--tg-theme-button-color: #5288c1;
+--tg-theme-button-text-color: #ffffff;
+--tg-theme-destructive-text-color: #ec3942;
+--tg-theme-header-bg-color: #17212b;
+--tg-theme-hint-color: #708499;
+--tg-theme-link-color: #6ab3f3;
+--tg-theme-secondary-bg-color: #232e3c;
+--tg-theme-section-bg-color: #17212b;
+--tg-theme-section-header-text-color: #6ab3f3;
+--tg-theme-subtitle-text-color: #708499;
+--tg-theme-text-color: #f5f5f5;
+--tg-viewport-height: 590px;
+--tg-viewport-stable-height: 590px;
+"
+
+>
 <head>
 	<meta charset="utf-8">
 	<title>Poput4k</title>
