--- a/samples/poputka/tg.html
+++ b/samples/poputka/tg.html
@@ -55,6 +55,16 @@ style="
 const tg = window.Telegram.WebApp;
 
 /*
+tg.initData //получаем данные от пользователя в виде строки (работает только при запуске из меню команд бота). 
+tg.initDataUnsafe // получаем данные от пользователя в виде объекта (работает только при запуске из меню команд бота). 
+tg.isExpanded // возвращает true, если приложение открыто на всю высоту, false - если нет. 
+tg.viewportHeight // вернёт ширину окна.
+tg.sendData(data) // отправляет данные  боту в строковом виде, после чего закрывает приложение (работает только если приложение запущено с keyboard button). 
+tg.ready() // метод позволяет отследить, когда приложение готово к отображению.
+tg.expand() // метод позволяет растянуть окно на всю высоту.
+tg.close() // метод закрывает приложение.
+
+
 tg.MainButton.text // текст кнопки, по умолчанию: "Continue"
 tg.MainButton.color // цвет текста
 tg.MainButton.textColor // цвет подложки
@@ -69,5 +79,13 @@ tg.MainButton.disable() // сделать неактивной
 tg.MainButton.setParams(params) // задает параметры в виде объекта
 */
 
+tg.expand();
 tg.MainButton.show();
+
+tg.onEvent('mainButtonClicked', function(){
+	const tgt = dociment.getElementById("tgMainButton");
+	tgt.click();
+	console.log("tgMainButton clicked");
+	//tg.sendData("some string that we need to send"); 
+});
 </script>
