--- a/samples/poputka/tg.html
+++ b/samples/poputka/tg.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
 
-style="
+_style="
 --tg-theme-accent-text-color: #168acd;
 --tg-color-scheme: light;
 --tg-theme-bg-color: #ffffff;
@@ -20,7 +20,7 @@ style="
 --tg-viewport-stable-height: 590px;
 "
 
-_style="
+style="
 --tg-theme-accent-text-color: #6ab2f2;
 --tg-color-scheme: dark;
 --tg-theme-bg-color: #17212b;
@@ -51,6 +51,8 @@ _style="
 </head>
 <script src="poputka-tg.js" type=module></script>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+<a href="tg://user?id=1517442438">Who</a>
 
 <script>
 
