--- a/samples/poputka/tg.html
+++ b/samples/poputka/tg.html
@@ -51,9 +51,6 @@ style="
 </head>
 <script src="poputka-tg.js" type=module></script>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
-<a href="tg://user?id=1517442438">Who</a>
-
 <script>
 
 
@@ -68,7 +65,7 @@ mockUser ={
 	"is_bot": false,
 	"first_name": "Mock",
 	"last_name": "User",
-	"username": "MaxSazhin",
+	"username": "poput4k_bot",
 	"language_code": "en"
 };
 
