--- a/samples/poputka/tg.html
+++ b/samples/poputka/tg.html
@@ -73,6 +73,7 @@ mockUser ={
 localStorage.setItem("user",JSON.stringify(user||mockUser));
 
 tg.expand();
+tg.enableClosingConfirmation();
 tg.MainButton.show();
 
 const mainButtonLabels = {
