--- a/stuff/drydb/index.html
+++ b/stuff/drydb/index.html
@@ -2,12 +2,12 @@
 <body style="display:flex; flex-direction:row;">
 	<!-- input id="scheme" value="heading page"/ -->
 	<textarea id="text" style="width:30em" onchange="javascript:process()">
-drive, driver, route, date:date, info:json
-driver, person, vehicle, plate:text, stars
-hike, person, drive, info:json, stars
-person, info:json, stars
-route, title:string, stops:text
-vehicle, name, info:json,seats
+route title:string stops:text
+event date: route info:json
+person info:json stars
+visit person event stars
+
+vehicle name info:json seats
 </textarea>
 	<div id="result" style="flex:auto; background:whitesmoke; overflow:auto; padding:1em; white-space:pre; font-family:monospace"/>
 </body>
